syntax = "proto3";

package good.middleware.app.good1.default1.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/good/middleware/v1/app/good/default";

import "basetypes/v1/conds.proto";
import "basetypes/good/v1/enums.proto";

message DefaultReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppGoodID = 30;
    optional string CoinTypeID = 40;
}

message Default {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"good_id"
    string GoodID = 40;
    // @inject_tag: sql:"good_name"
    string GoodName = 50;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 60;
    // @inject_tag: sql:"app_good_name"
    string AppGoodName = 70;
    // @inject_tag: sql:"coin_type_id"
    string CoinTypeID = 80;
    // @inject_tag: sql:"good_type"
    string GoodTypeStr = 90;
    basetypes.good.v1.GoodType GoodType = 100;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.StringVal EntID = 20;
    optional basetypes.v1.StringVal AppID = 30;
    optional basetypes.v1.StringVal GoodID = 40;
    optional basetypes.v1.StringVal AppGoodID = 50;
    optional basetypes.v1.StringVal CoinTypeID = 60;
    optional basetypes.v1.StringSliceVal GoodIDs = 70;
    optional basetypes.v1.StringSliceVal CoinTypeIDs = 80;
    optional basetypes.v1.Uint32Val GoodType = 90;
}

